docs: swagger update for watchlist
